--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="keywords" content="哈德森的知识库">
     <title>哈德森的知识库</title>
-    <link rel="icon" href="icon.svg" type="image/x-icon">
+    <--<link rel="icon" href="icon.svg" type="image/x-icon">-->
     <style>
         div{
             position : absolute;
