--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body id="grad1">
 <h1>在线播放器</h1>
 <iframe marginheight=0 marginwidth=0 frameborder=0 width=100% style="overflow-x:hidden;"
-        height=100% scrolling=auto src="https://movie.xhxjgogo.tk/" name=showmain id=showmain onload="resize();">不能正常显示
+        height=100% scrolling=auto src="http://124.221.150.119:8090/" name=showmain id=showmain onload="resize();">不能正常显示
 </iframe>
 </body>
 </html>
